<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012 - 2013 Ohso Ltd

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing,
software distributed under the License is distributed on an
"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
KIND, either express or implied.  See the License for the
specific language governing permissions and limitations
under the License.
-->
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Application and menu-level strings -->
    <string name="app_name">OMG! Ubuntu!</string>
    <string name="menu_share">Share</string>
    <string name="menu_star">Star</string>
    <string name="menu_unstar">Unstar</string>

    <!-- Misc activity strings -->
    <string name="title_activity_main">OMG! Ubuntu!</string>
    <string name="title_activity_comments">Comments</string>
    <string name="title_about">About OMG! Ubuntu!</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_settings">Settings</string>
    <string name="title_starred">Starred</string>
    <string name="activity_main_mark_all_as_read">Mark all as read?</string>
    <string name="activity_main_mark_all_as_read_confirmation">Mark</string>
    <string name="activity_main_footer_text">Load more articles</string>
    <string name="activity_main_footer_over">Visit the OMG! Ubuntu! website for more articles&#8230;</string>
    <string name="activity_main_footer_dialog">Visit OMG! Ubuntu! via</string>
    <string name="activity_main_share_intent_text">Share this article via</string>
    <string name="widget_articles_list_title">Latest posts</string>
    <string name="widget_froyo_articles_list_title">Latest post</string>
    <string name="widget_articles_list_empty_title">No recent articles</string>
    <string name="activity_article_comment_text">Read Comments</string>
    <string name="fragment_feedback_header">Feedback</string>
    <string name="fragment_feedback_button">Send An Email</string>
    <string name="fragment_feedback_tips_header">Tips</string>
    <string name="fragment_feedback_tips_button">Tip Form</string>
    <string name="fragment_feedback_email_text">Send mail via</string>
    
    <string name="dialog_fragment_open">Open</string>
    <string name="dialog_fragment_cancel">Cancel</string>
    <string name="loading_text">Loading&#8230;</string>
    
    <!-- ImageView descriptions -->
    <string name="app_logo_description">OMG! Ubuntu! bubble logo</string>
    <string name="article_image_description">Thumbnail image for an article</string>
    <string name="starred_image_description">Image to mark a starred article</string>
    <string name="unread_image_description">Image to mark an unread article</string>
    <string name="menu_refresh_description">Refresh icon for refreshing the articles list</string>
    <string name="omg_logo_description">OMG! Ubuntu! logo</string>
    <string name="ohso_logo_description">Ohso Ltd logo</string>

    <!-- Errors -->
    <string name="refresh_error">Couldn\'t refresh the feed. Try again in a few moments.</string>
    <string name="connection_error">Couldn\'t connect. Try again later.</string>
    <string name="xml_error">Couldn\'t read</string>
    <string name="article_fetch_error">Couldn\'t get the article. Would you like to open it in an external browser?</string>
    <string name="external_link_error">This link leaves the app. Would you like to open it?</string>

    <!-- Dialog text -->
    <string name="article_fetch_error_dialog">Reopen article in</string>
    <string name="external_link_dialog">Open link via</string>

    <!-- Notifications -->
    <string name="new_article_notification_singular">New article</string>
    <string name="new_article_notification_plural">New articles</string>

    <!-- Misc body copy -->
    <string name="fragment_feedback_copy">Have any comments about the app? Send an email to contact@omgubuntu.co.uk and let us know!</string>
    <string name="fragment_feedback_tips_copy">Have a tip? Use our tip form linked below.</string>

    <string name="activity_about_omg_ubuntu"><![CDATA[
<p>Hello! We\'re OMG! Ubuntu! &ndash; the most read, most active and most up-to-date Linux-orientated news site on the web.</p>
<p>We bring the latest Ubuntu news, app reviews, and tutorials to millions of readers every month.</p>
<p>But we\'re more than just a website we\'re also a community, boasting some 200,000 subscribers over <a href="http://twitter.com/omgubuntu">Twitter</a>, <a href="http://facebook.com/omgubuntu">Facebook</a>, <a href="http://youtube.com/omgubuntu">Youtube</a>, <a href="feeds.feedburner.com/d0od">RSS</a>, and <a href="http://plus.google.com/+omgubuntu">Google+</a>.</p>
<p>And by using this app you\'re now part of that community, too.</p>
]]></string>
    <string name="activity_about_ohso"><![CDATA[
<p>OMG! Ubuntu! is part of the <strong><a href="http://ohso.co">Ohso Ltd</a></strong> network, a UK-based media and software publishing company founded in 2010.</p>        
]]></string>
</resources>