<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012 - 2013 Ohso Ltd

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing,
software distributed under the License is distributed on an
"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
KIND, either express or implied.  See the License for the
specific language governing permissions and limitations
under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/article_row_star" android:visible="false" android:title="@string/menu_star"></item>
    <item android:id="@+id/article_row_unstar" android:visible="false" android:enabled="true" android:title="@string/menu_unstar"></item>
    <item android:id="@+id/article_mark_as_read" android:visible="false" android:enabled="true" android:title="Mark as read"></item>
    <item android:id="@+id/article_mark_as_unread" android:visible="false" android:enabled="true" android:title="Mark as unread"></item>
    <item android:id="@+id/article_share" android:visible="true" android:enabled="true" android:title="@string/menu_share"></item>
</menu>